--- a/cardapio.html
+++ b/cardapio.html
@@ -3,77 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cardápio | hamburguerShop</title>
+    <title>Cardápio | HamburguerShop</title>
 
     <link rel="stylesheet" href="style.css">
-    
 </head>
+
 <body>
 
-  <nav class="menu">
-    <img class="logo-menu" src="img/logo.png" alt="Logo">
+    <!-- MENU -->
+    <header>
+        <nav class="menu">
+            <img class="logo-menu" src="img/logo.png" alt="Logo da HamburguerShop">
 
-    <a href="index.html">Home</a>
-    <a href="cardapio.html">Cardápio</a>
-    <a href="contato.html">Contato</a>
-</nav>
+            <a href="index.html">Home</a>
+            <a href="cardapio.html">Cardápio</a>
+            <a href="contato.html">Contato</a>
+        </nav>
+    </header>
 
-
-    <div class="container">
+    <!-- CONTEÚDO PRINCIPAL -->
+    <main class="container">
 
         <h2 class="reveal">Nosso Cardápio</h2>
-
         <p>Escolha seu favorito!</p>
 
-        <div class="cardapio">
+        <section class="cardapio">
 
             <!-- Clássico Smash -->
-            <div class="card-item reveal">
-                <img class="mini"
-                     src="img/smash.webp">
-                <strong>Clássico Smash</strong><br>
-                R$ 22,90<br>
+            <article class="card-item reveal">
+                <img class="mini" src="img/smash.webp" alt="Hambúrguer Clássico Smash">
+                <strong>Clássico Smash</strong>
+                <p class="preco">R$ 22,90</p>
                 <small>Pão brioche, carne smash e queijo.</small>
-                <div class="clear"></div>
-            </div>
+            </article>
 
             <!-- Cheddar Bacon -->
-           <div class="card-item reveal">
-                <img class="mini"
-                     src="img/chedar.jpg">
-                <strong>Cheddar Bacon</strong><br>
-                R$ 28,90<br>
+            <article class="card-item reveal">
+                <img class="mini" src="img/chedar.jpg" alt="Hambúrguer Cheddar com Bacon">
+                <strong>Cheddar Bacon</strong>
+                <p class="preco">R$ 28,90</p>
                 <small>Cheddar cremoso, bacon crocante.</small>
-                <div class="clear"></div>
-            </div>
+            </article>
 
-            <!-- Duplo Artesanal (o que você disse que faltou) -->
-            <div class="card-item reveal">
-                <img class="mini"
-                     src="img/duplo.jpg">
-                <strong>Duplo Artesanal</strong><br>
-                R$ 32,90<br>
+            <!-- Duplo Artesanal -->
+            <article class="card-item reveal">
+                <img class="mini" src="img/duplo.jpg" alt="Hambúrguer Duplo Artesanal">
+                <strong>Duplo Artesanal</strong>
+                <p class="preco">R$ 32,90</p>
                 <small>Dois smash artesanais e molho especial.</small>
-                <div class="clear"></div>
-            </div>
+            </article>
 
+        </section>
+
+    </main>
+
+    <!-- RODAPÉ -->
+    <footer class="footer">
+        <p>© 2025 HamburguerShop — Todos os direitos reservados.</p>
+
+        <div class="footer-links">
+            <a href="https://www.instagram.com" target="_blank">Instagram</a>
+            <a href="https://wa.me/5562981490382" target="_blank">WhatsApp</a>
+            <a href="contato.html">Localização</a>
         </div>
+    </footer>
 
-    </div>
+    <!-- BOTÃO WHATSAPP -->
+    <a class="whatsapp-float" href="https://wa.me/5562981490382" target="_blank">
+        <img src="img/whatsapp.svg" alt="WhatsApp">
+    </a>
 
-   <footer class="footer">
-    <p>© 2025 HamburguerShop — Todos os direitos reservados.</p>
+    <script>
+    const reveals = document.querySelectorAll(".reveal");
 
-    <div class="footer-links">
-        <a href="https://www.instagram.com" target="_blank">Instagram</a>
-        <a href="https://wa.me/5562981490382" target="_blank">WhatsApp</a>
-        <a href="contato.html">Localização</a>
-    </div>
-</footer>
+    function revealOnScroll() {
+        for (let i = 0; i < reveals.length; i++) {
+            let windowHeight = window.innerHeight;
+            let elementTop = reveals[i].getBoundingClientRect().top;
 
-<a class="whatsapp-float" href="https://wa.me/5562981490382" target="_blank">
-    <img src="img/whatsapp.svg" alt="WhatsApp">
-</a>
+            if (elementTop < windowHeight - 80) {
+                reveals[i].classList.add("active");
+            }
+        }
+    }
+
+    window.addEventListener("scroll", revealOnScroll);
+    revealOnScroll();
+</script>
 
 </body>
 </html>
