--- a/cardapio.html
+++ b/cardapio.html
@@ -30,12 +30,12 @@
         <section class="cardapio">
 
             <!-- Clássico Smash -->
-            <article class="card-item reveal">
-                <img class="mini" src="img/smash.webp" alt="Hambúrguer Clássico Smash">
-                <strong>Clássico Smash</strong>
-                <p class="preco">R$ 22,90</p>
-                <small>Pão brioche, carne smash e queijo.</small>
-            </article>
+    <a href="produto.html" class="card-item reveal">
+        <img src="img/smash.webp" alt="Hambúrguer Clássico Smash">
+        <strong>Clássico Smash</strong>
+        <p class="preco">R$ 22,90</p>
+        <small>Pão brioche, carne smash e queijo.</small>
+    </a>
 
             <!-- Cheddar Bacon -->
             <article class="card-item reveal">
@@ -59,7 +59,7 @@
 
     <!-- RODAPÉ -->
     <footer class="footer">
-        <p>© 2025 HamburguerShop — Todos os direitos reservados.</p>
+        <p>© 2026 HamburguerShop</p>
 
         <div class="footer-links">
             <a href="https://www.instagram.com" target="_blank">Instagram</a>
