--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>  <!-- /container -->
     
     <footer class="footer">
-    <p>© 2025 HamburguerShop — Todos os direitos reservados.</p>
+    <p>© 2026 HamburguerShop</p>
 
     <div class="footer-links">
         <a href="https://www.instagram.com" target="_blank">Instagram</a>
