--- a/contato.html
+++ b/contato.html
@@ -56,7 +56,7 @@
 
     <!-- RODAPÉ -->
     <footer class="footer">
-    <p>© 2025 HamburguerShop — Todos os direitos reservados.</p>
+    <p>© 2026 HamburguerShop</p>
 
     <div class="footer-links">
         <a href="https://www.instagram.com" target="_blank">Instagram</a>
