atualização e reorganização do site

--- a/cardapio.html
+++ b/cardapio.html
@@ -25,21 +25,21 @@
     <main class="container">
 
         <h2 class="reveal">Nosso Cardápio</h2>
-        <p>Escolha seu favorito!</p>
+        <p class="reveal">Escolha seu favorito!</p>
 
         <section class="cardapio">
 
             <!-- Clássico Smash -->
-    <a href="produto.html" class="card-item reveal">
-        <img src="img/smash.webp" alt="Hambúrguer Clássico Smash">
-        <strong>Clássico Smash</strong>
-        <p class="preco">R$ 22,90</p>
-        <small>Pão brioche, carne smash e queijo.</small>
-    </a>
+              <article class="card-item reveal">
+                 <img class="mini" src="img/smash.webp" alt="Hambúrguer Smash"> 
+                <strong>Clássico Smash</strong>
+                 <p class="preco">R$ 22,90</p>
+            <small>Pão brioche, carne smash e queijo.</small>
+            </article>
 
             <!-- Cheddar Bacon -->
             <article class="card-item reveal">
-                <img class="mini" src="img/chedar.jpg" alt="Hambúrguer Cheddar com Bacon">
+                <img class="mini" src="img/cheddar.jpg" alt="Hambúrguer Cheddar com Bacon">
                 <strong>Cheddar Bacon</strong>
                 <p class="preco">R$ 28,90</p>
                 <small>Cheddar cremoso, bacon crocante.</small>
@@ -59,8 +59,7 @@
 
     <!-- RODAPÉ -->
     <footer class="footer">
-        <p>© 2026 HamburguerShop</p>
-
+        <p> @ 2025 HamburguerShop - Todos os direitos reservados.</p>
         <div class="footer-links">
             <a href="https://www.instagram.com" target="_blank">Instagram</a>
             <a href="https://wa.me/5562981490382" target="_blank">WhatsApp</a>
