--- a/produto.html
+++ b/produto.html
@@ -11,41 +11,47 @@
 <body>
 
     <!-- MENU -->
-    <nav class="menu">
-        <img class="logo-menu" src="img/logo.png" alt="Logo da HamburguerShop">
-        <a href="index.html">Home</a>
-        <a href="cardapio.html">Cardápio</a>
-        <a href="contato.html">Contato</a>
-    </nav>
+    <header>
+        <nav class="menu">
+            <img class="logo-menu" src="img/logo.png" alt="Logo da HamburguerShop">
+            <a href="index.html">Home</a>
+            <a href="cardapio.html">Cardápio</a>
+            <a href="contato.html">Contato</a>
+        </nav>
+    </header>
 
     <main class="container">
 
-        <h2>Clássico Smash</h2>
+        <article class="produto">
 
-        <img src="img/smash.webp" alt="Hambúrguer Clássico Smash" class="produto-img">
+            <h2>Clássico Smash</h2>
 
-        <p class="produto-preco">R$ 22,90</p>
+            <img src="img/smash.webp" alt="Hambúrguer Clássico Smash" class="produto-img">
 
-        <button class="btn btn-ingredientes" onclick="toggleIngredientes()">
-        Ver ingredientes
-        </button>
+             <p class="produto-preco">R$ 22,90</p>
 
-            <ul class="ingredientes" id="ingredientes">
+            <button class="btn btn-ingredientes" onclick="toggleIngredientes()">
+            Ver ingredientes
+            </button>
+
+            <ul class="ingredientes is-fechado" id="ingredientes">
                 <li>Pão brioche</li>
                 <li>Carne smash artesanal</li>
                 <li>Queijo cheddar</li>
                 <li>Molho especial</li>
             </ul>
 
+        <div class="produtos-acoes">    
+            <a 
+             class="btn whatsapp" 
+             href="https://wa.me/5562981490382?text=Quero%20o%20Cl%C3%A1ssico%20Smash"
+             target="_blank"
+            >
+             Pedir agora no WhatsApp
+            </a>
+        </div>
 
-        <a 
-          class="btn whatsapp" 
-          href="https://wa.me/5562981490382?text=Quero%20o%20Cl%C3%A1ssico%20Smash"
-          target="_blank"
-        >
-          Pedir agora no WhatsApp
-        </a>
-
+          </article>        
     </main>
 
     <footer class="footer">
@@ -55,7 +61,8 @@
     <script>
     function toggleIngredientes() {
         const lista = document.getElementById("ingredientes");
-        lista.classList.toggle("ativo");
+        lista.classList.toggle("is-aberto");
+        lista.classList.toggle("is-fechado");   
     }
     </script>
 
