--- a/contato.html
+++ b/contato.html
@@ -19,7 +19,7 @@
 </nav>
 
     <!-- CONTAINER PRINCIPAL -->
-    <div class="container">
+    <main class="container">
 
         <h1>Fale Conosco</h1>
         <p>Entre em contato através dos canais abaixo:</p>
@@ -31,8 +31,6 @@
             Enviar mensagem
         </a>
 
-        <br><br>
-
         <!-- Endereço -->
         <h3>📍 Endereço</h3>
         <p>Rua dos Hambúrgueres, 123 — Centro</p>
@@ -41,22 +39,27 @@
         <h3>⏰ Funcionamento</h3>
         <p>Segunda a Domingo: 11h às 23h</p>
 
-        <br>
 
         <!-- Formulário de Contato -->
         <h3>✉️ Formulário de Contato</h3>
         <form class="form-contato">
-            <input type="text" placeholder="Seu nome" required>
-            <input type="email" placeholder="Seu e-mail" required>
-            <textarea placeholder="Sua mensagem"></textarea>
+            <label for="nome">Nome</label>
+            <input type="text"  id="nome" name="nome" placeholder="Seu nome" required>
+
+            <label for="email">E-mail</label>
+            <input type="email" id="email" name="email" placeholder="Seu e-mail" required>
+
+            <label for="mensagem">Mensagem</label>
+            <textarea id="mensagem" name="mensagem" placeholder=" sua mensagem aqui"></textarea>
+
             <button class="btn" type="submit">Enviar</button>
         </form>
 
-    </div> <!-- Fim container -->
+    </main> <!-- Fim container -->
 
     <!-- RODAPÉ -->
     <footer class="footer">
-    <p>© 2026 HamburguerShop</p>
+    <p>@ 2025 HamburguerShop - Todos os direitos reservados.</p>
 
     <div class="footer-links">
         <a href="https://www.instagram.com" target="_blank">Instagram</a>
