Protótico finalizado. Preparado para publicação

--- a/cardapio.html
+++ b/cardapio.html
@@ -59,18 +59,13 @@
 
     <!-- RODAPÉ -->
     <footer class="footer">
-        <p> @ 2025 HamburguerShop - Todos os direitos reservados.</p>
+        <p>© 2025 HamburguerShop - Todos os direitos reservados.</p>
         <div class="footer-links">
             <a href="https://www.instagram.com" target="_blank">Instagram</a>
             <a href="https://wa.me/5562981490382" target="_blank">WhatsApp</a>
             <a href="contato.html">Localização</a>
         </div>
     </footer>
-
-    <!-- BOTÃO WHATSAPP -->
-    <a class="whatsapp-float" href="https://wa.me/5562981490382" target="_blank">
-        <img src="img/whatsapp.svg" alt="WhatsApp">
-    </a>
 
     <script>
     const reveals = document.querySelectorAll(".reveal");
