--- a/contato.html
+++ b/contato.html
@@ -22,17 +22,20 @@
     <main class="container">
 
         <h1>Fale Conosco</h1>
-        <p>Entre em contato através dos canais abaixo:</p>
+        <p>Fale com a gente agora ou envie uma mensagem pelo formulário 👇</p>
+        <section>
+            <p style="text-align:center; font-size:14px; color:#666;">Respondemos o mais rápido possível 🙂</p>
 
-        <!-- WhatsApp -->
-        <h3>📞 WhatsApp</h3>
-        <p>(62) 98149-0382</p>
-        <a class="btn whatsapp" href="https://wa.me/5562981490382" target="_blank">
-            Enviar mensagem
-        </a>
+            <!-- WhatsApp -->
+            <h2>📞 WhatsApp</h2>
+            <p>(62) 98149-0382</p>
+            <a class="btn whatsapp" href="https://wa.me/5562981490382" target="_blank">
+                Enviar mensagem
+            </a>
+        </section>
 
         <!-- Endereço -->
-        <h3>📍 Endereço</h3>
+        <h2>📍 Endereço</h2>
         <p>Rua dos Hambúrgueres, 123 — Centro</p>
 
         <!-- Horário de Funcionamento -->
@@ -42,7 +45,7 @@
 
         <!-- Formulário de Contato -->
         <h3>✉️ Formulário de Contato</h3>
-        <form class="form-contato">
+        <form class="form-contato" action="#" method="post">
             <label for="nome">Nome</label>
             <input type="text"  id="nome" name="nome" placeholder="Seu nome" required>
 
@@ -52,15 +55,14 @@
             <label for="mensagem">Mensagem</label>
             <textarea id="mensagem" name="mensagem" placeholder=" sua mensagem aqui"></textarea>
 
-            <button class="btn" type="submit">Enviar</button>
+            <button class="btn" type="submit">Enviar mensagem</button>
         </form>
 
     </main> <!-- Fim container -->
 
     <!-- RODAPÉ -->
     <footer class="footer">
-    <p>@ 2025 HamburguerShop - Todos os direitos reservados.</p>
-
+    <p>© 2025 HamburguerShop - Todos os direitos reservados.</p>
     <div class="footer-links">
         <a href="https://www.instagram.com" target="_blank">Instagram</a>
         <a href="https://wa.me/5562981490382" target="_blank">WhatsApp</a>
@@ -68,9 +70,6 @@
     </div>
 </footer>
 
-<a class="whatsapp-float" href="https://wa.me/5562981490382" target="_blank">
-    <img src="img/whatsapp.svg" alt="WhatsApp">
-</a>
-
 </body>
 </html>
+
