--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>  <!-- /container -->
             
         <footer class="footer">
-            <p>@ 2025 HamburguerShop - Todos os direitos reservados.</p>
+        <p>© 2025 HamburguerShop - Todos os direitos reservados.</p>
 
             <div class="footer-links">
                 <a href="https://www.instagram.com" target="_blank">Instagram</a>
@@ -79,15 +79,23 @@
             </div>
         </footer>
 
-        <a class="whatsapp-float" href="https://wa.me/5562981490382" target="_blank">
-            <img src="img/whatsapp.svg" alt="WhatsApp">
-        </a>
-
         <script>
         function toggleIngredientes() {
             const lista = document.getElementById("ingredientes");
             lista.hidden = !lista.hidden;
         }
         </script>
+        <a 
+  href="https://wa.me/5562981490382"
+  class="whatsapp-float"
+  target="_blank"
+  aria-label="Falar no WhatsApp"
+>
+  <!-- ÍCONE SVG -->
+  <svg viewBox="0 0 32 32" width="26" height="26" fill="white">
+    <path d="M19.11 17.45c-.27-.14-1.6-.79-1.85-.88-.25-.09-.43-.14-.61.14-.18.27-.7.88-.86 1.06-.16.18-.32.2-.59.07-.27-.14-1.14-.42-2.17-1.34-.8-.72-1.34-1.61-1.5-1.88-.16-.27-.02-.41.12-.55.12-.12.27-.32.41-.48.14-.16.18-.27.27-.45.09-.18.05-.34-.02-.48-.07-.14-.61-1.47-.84-2.01-.22-.53-.45-.46-.61-.47h-.52c-.18 0-.48.07-.73.34-.25.27-.96.93-.96 2.27s.98 2.64 1.11 2.82c.14.18 1.93 2.95 4.69 4.13.66.28 1.17.45 1.57.58.66.21 1.26.18 1.73.11.53-.08 1.6-.65 1.82-1.28.23-.63.23-1.17.16-1.28-.07-.11-.25-.18-.52-.32z"/>
+  </svg>
+</a>
+
     </body>
 </html>
