--- a/produto.html
+++ b/produto.html
@@ -55,7 +55,7 @@
     </main>
 
     <footer class="footer">
-        <p>© 2026 HamburguerShop</p>
+        <p>© 2025 HamburguerShop - Todos os direitos reservados.</p>
     </footer>
 
     <script>
